# diagnosisCrew

./: README.md  pyproject.toml
src/diagnosis/: api.py  crew.py  main.py
src/diagnosis/config/: agents.yaml  tasks.yaml
