[tool.poetry]
name = "diagnosis"
version = "0.1.0"
description = "diagnosis using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
diagnosis = "diagnosis.main:run"
run_crew = "diagnosis.main:run"
train = "diagnosis.main:train"
replay = "diagnosis.main:replay"
test = "diagnosis.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
